Refatoração do Header. Criação dos módulos core e service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,1 @@
-<mat-toolbar color="primary" class="toolbar">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>catching_pokemon</mat-icon>
-  </button>
-  <h1>Pokedex</h1>
-</mat-toolbar>
-
-<div class="search" color="accent">
-  <h3>Search a Pokémon</h3>
-  <input type="text" [(ngModel)]="search" matInput placeholder="Ex. Greninja">
-  <button (click)="getPokemon()" type="submit"  mat-raised-button color="primary">
-    Search
-  </button>
-</div>
-
-<main *ngIf="card">
-  <mat-card class="pokemon">
-    <h1>{{pokemonData.name}}</h1>
-    <img src={{pokemonData.sprites.other.home.front_default}} alt="">
-  </mat-card>
-</main>
+<app-header></app-header>
