--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,38 @@
-.example-spacer {
-  flex: 1 1 auto;
-}
-
-.toolbar {
-  position: sticky;
-  top: 0;
-  z-index: 1;
-}
-
 main {
   background-color: #999;
   margin: 20px;
   padding: 20px;
   width: 90vw;
+  display: flex;
 }
+
+main p {
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+ul {
+  list-style: none;
+}
+
+.types {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  padding-left: 0px;
+  align-items: center;
+  margin-left: 0px;
+}
+
+.types {
+  // margin-left: 5px;
+}
+
+// .info {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: space-between;
+// }
 
 .pokemon {
   width: min-content;
