--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,56 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.grass{
+  background-color: #9BCC50;
+}
+.poison{
+  background-color: #B97FC9;
+}
+.fire{
+  background-color: #FD7D24;
+}
+.flying{
+  background-color: #9AA9FF;
+}
+.water{
+  background-color: #4592C4;
+}
+.normal{
+  background-color: #A4ACAF;
+}
+.electric{
+  background-color: #EED535;
+}
+.ground{
+  background-color: #E2C56F;
+}
+.fairy{
+  background-color: #FDB9E9;
+}
+.bug{
+  background-color: #729F3F;
+}
+.dark{
+  background-color: #8C6F61;
+}
+.dragon{
+  background-color: #8C7DF1;
+}
+.fighting{
+  background-color: #C56F61;
+}
+.ice{
+  background-color: #7DD4FF;
+}
+.ghost{
+  background-color: #7D7DC5;
+}
+.psychic{
+  background-color: #FF6EA8;
+}
+.rock{
+  background-color: #C5B77D;
+}
+
