--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,15 @@
 <ng-container>
-  <div >
+  <div>
     <div class="container" *ngIf="pokemonList.length > 1">
-      <mat-card *ngFor="let pokemon of pokemonList" class="poke-card">
+      <mat-card *ngFor="let pokemon of pokemonList" class="poke-card" MatPaginatorIntl>
         <img mat-card-image src={{pokemon.sprites.front_default}} alt="Photo of a Shiba Inu">
-        <mat-card-title>{{pokemon.name}}</mat-card-title>
+        <mat-card-title>{{pokemon.species.name | titlecase}}</mat-card-title>
         <mat-card-subtitle>#{{pokemon.id}}</mat-card-subtitle>
+        <mat-card-content>
+          <span *ngFor="let type of pokemon.types" class="type {{type.type.name}}">
+            {{type.type.name | titlecase}}
+          </span>
+        </mat-card-content>
       </mat-card>
     </div>
   </div>
