--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,4 +12,12 @@
 
 .poke-card {
   margin: 10px;
+  background-color: #F2F2F2;
+}
+
+.type {
+  padding: 10px;
+  margin-right: 10px;
+  color: #FFF;
+  border-radius: 5px;
 }
