Resolvido o problem de quebra de ordem na hora da listagem. Adicionado um sistema de navegação entre gerações(não finalizado)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,4 +54,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .rock{
   background-color: #C5B77D;
 }
+.steel{
+  background-color: #B7B7C5;
+}
 
