--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <ng-container>
-  <div>
+  <div >
     <div class="container" *ngIf="pokemonList.length > 1">
       <mat-card *ngFor="let pokemon of pokemonList" class="poke-card" MatPaginatorIntl>
-        <img mat-card-image src={{pokemon.sprites.front_default}} alt="Photo of a Shiba Inu">
+        <a routerLink="/{{pokemon.id}}">
+          <img mat-card-image src={{pokemon.sprites.front_default}} alt="Photo of a Shiba Inu">
+        </a>
         <mat-card-title>{{pokemon.species.name | titlecase}}</mat-card-title>
         <mat-card-subtitle>#{{pokemon.id}}</mat-card-subtitle>
         <mat-card-content>
