--- a/src/app/home/poke-page/poke-page.component.scss
+++ b/src/app/home/poke-page/poke-page.component.scss
@@ -1,5 +1,5 @@
 .type {
-  padding: 10px;
+  padding: 5px;
   margin-right: 10px;
   color: #FFF;
   border-radius: 5px;
@@ -7,4 +7,15 @@
 }
 .mat-card {
   display: flex;
+}
+.info {
+  div{
+    margin-bottom: 10px;
+  }
+}
+.ability {
+  background-color: #999;
+  padding: 5px;
+  border-radius: 5px;
+  margin-right: 10px;
 }
