--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 main {
-  background-color: #999;
+  background-color: red;
   margin: 20px;
   padding: 20px;
   width: 90vw;
@@ -22,10 +22,6 @@ ul {
   padding-left: 0px;
   align-items: center;
   margin-left: 0px;
-}
-
-.types {
-  // margin-left: 5px;
 }
 
 // .info {
