--- a/src/app/home/generation/generation.component.html
+++ b/src/app/home/generation/generation.component.html
@@ -1,8 +1,7 @@
 <ng-container>
   <div class="container-fluid">
-    <div>
       <div class="container" *ngIf="pokemons.length > 0">
-        <mat-card *ngFor="let pokemon of pokemons" class="poke-card" MatPaginatorIntl>
+        <mat-card *ngFor="let pokemon of pokemons" class="card-main poke-card" MatPaginatorIntl>
           <a routerLink="/{{pokemon.id}}">
             <img mat-card-sm-image src={{pokemon.sprites.front_default}} alt={{pokemon.species.name}}>
           </a>
@@ -15,6 +14,5 @@
           </mat-card-content>
         </mat-card>
       </div>
-    </div>
   </div>
 </ng-container>
