--- a/src/app/home/poke-page/poke-page.component.html
+++ b/src/app/home/poke-page/poke-page.component.html
@@ -1,5 +1,5 @@
 <div class="container" *ngIf="pokemon">
-  <mat-card class="my-2">
+  <mat-card class="my-2 card-main">
     <div class="container">
       <div class="row">
         <div class="img col-6 col-xl-4">
