--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,17 +2,21 @@
 
 @use "@angular/material" as mat;
 
+@import "node_modules/bootstrap/scss/bootstrap";
+
 @include mat.core();
 
-$my-primary: mat.define-palette(mat.$blue-gray-palette, 900);
-$my-accent: mat.define-palette(mat.$grey-palette, 900);
+$body-bg: #000;
+
+$my-primary: mat.define-palette(mat.$purple-palette, 900);
+$my-accent: mat.define-palette(mat.$yellow-palette, 200);
 $my-warn: mat.define-palette(mat.$red-palette, 800);
 
 $dark-primary: mat.define-palette(mat.$gray-palette, 900);
 $dark-accent: mat.define-palette(mat.$brown-palette, 900);
 $dark-warn: mat.define-palette(mat.$red-palette, 800);
 
-$my-theme: mat.define-light-theme(
+$my-theme: mat.define-dark-theme(
   (
     color: (
       primary: $my-primary,
@@ -32,10 +36,29 @@ $dark-theme: mat.define-light-theme(
 
 @include mat.all-component-themes($my-theme);
 
+* {
+  margin: 0px;
+  padding: 0px;
+}
 html, body { min-height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.above {
+  height: 100%;
+  background-color: red;
+}
 
 
+.card-main {
+  background-color: #263238;
+  color: #fff;
+  p, span {
+    font-size: 1.2em;
+  }
+}
 
 .grass{
   background-color: #9BCC50;
