Added cosmog theme on styles.scss

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -6,7 +6,7 @@
           <use xlink:href="#bootstrap"></use>
         </svg>
       </a>
-      <span class="text-muted">© 2022 - Renato Dias</span>
+      <span>© 2022 - Renato Dias</span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
