--- a/src/app/home/poke-page/poke-page.component.html
+++ b/src/app/home/poke-page/poke-page.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="img col-6 col-xl-4">
           <h1 class="mat-h1 mx-4 my-0">{{pokemon.species.name|titlecase}}</h1>
-          <img mat-card-xl-image src={{pokemon.sprites.other.home.front_default}} alt={{pokemon.species.name}}>
+          <img mat-card-xl-image src="{{pokemon['sprites']['other']['official-artwork']['front_default']}}" alt={{pokemon.species.name}}>
         </div>
         <div class="info col-12 col-md-6 col-xl-4">
           <h2>Pokédex Data</h2>
