--- a/src/app/xy/xy-battles/xy-battles.component.scss
+++ b/src/app/xy/xy-battles/xy-battles.component.scss
@@ -1,7 +1,7 @@
 @import "src/styles.scss";
 
 .card-main {
-  margin: 30px;
+  margin: 10px;
   padding: 20px;
 }
 
@@ -15,21 +15,25 @@
   margin-bottom: 20px;
 }
 
-.poke-card {
+.poke-info {
   height: 100%;
   width: 300px;
+  margin-top: 2px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $cosmog-navy;
+  background-color: $secondary;
+}
+
+mat-ink-bar {
+  background-color: red;
 }
 
 .gym-leader-frame {
-  color: $cosmog-black;
   padding: 10px;
   background-color: #FFF;
   border-radius: 5px;
-  width: 250px;
+  width: 240px;
   height: 200px;
   display: flex;
   flex-direction: column;
